--- a/src/frontend_next/styles/globals.css
+++ b/src/frontend_next/styles/globals.css
@@ -1,59 +1,8 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+html , body{
+  background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+  min-height: 100vh;
 }
-
-* {
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  background: url('../public/bg.jpg')  no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
-/* // */
-#navbar {
-  background-color: black;
-  display: flex;
-  flex-direction: row;
-  height: 100vh;
-  width: 150px;
-}
-
-#navbar ul {
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
-}
-
-#navbar li {
-  width: 100%;
-  text-align: center;
-}
-
-#logo {
-  width: 100%;
-  text-align: center;
-}
-/* // */
