--- a/src/frontend_next/styles/globals.css
+++ b/src/frontend_next/styles/globals.css
@@ -2,7 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-html , body{
+/* html , body{
   background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
-  min-height: 100vh;
+  height: 100vh;
+} */
+
+body {
+	background: linear-gradient(-45deg, #ee7752, #fb2727, #23a6d5, #23d5ab);
+	background-size: 200% 200%;
+	animation: gradient 15s ease infinite;
+	height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+nav {
+  background-color: #a4a4a47a;
+  backdrop-filter: brightness(1.9);
+}
+
+.login {
+  background-color: #a4a4a47a;
+  backdrop-filter: brightness(1.9);
 }
