--- a/src/frontend_next/styles/globals.css
+++ b/src/frontend_next/styles/globals.css
@@ -9,8 +9,8 @@
 
 body {
 	background: linear-gradient(-45deg, #ee7752, #fb2727, #23a6d5, #23d5ab);
-	background-size: 200% 200%;
-	animation: gradient 15s ease infinite;
+	background-size: 230% 200%;
+	animation: gradient 10s ease infinite;
 	height: 100vh;
 }
 
@@ -26,6 +26,12 @@ body {
 	}
 }
 
+#appRootContainer {
+	height: 100vh;
+	background-color: #a4a4a47a;
+  	backdrop-filter: blur(10px);
+}
+
 nav {
   background-color: #a4a4a47a;
   backdrop-filter: brightness(1.9);
@@ -35,3 +41,62 @@ nav {
   background-color: #a4a4a47a;
   backdrop-filter: brightness(1.9);
 }
+/* chat */
+ul {
+	list-style: none;
+	padding: 0;
+  }
+  
+  li {
+	margin-bottom: 10px;
+  }
+  
+  form {
+	display: flex;
+  }
+  
+  input {
+	flex-grow: 1;
+	margin-right: 10px;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+  }
+  
+  button {
+	padding: 10px;
+	border: none;
+	background-color: #007bff;
+	color: #fff;
+	border-radius: 4px;
+	cursor: pointer;
+  }
+
+/* profile */
+.card {
+	background-color: rgba(255, 255, 255, 0.218);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	border-radius: 6px;
+	padding: 20px;
+	margin-bottom: 20px;
+  }
+  
+  h1 {
+	text-align: center;
+	margin-bottom: 20px;
+  }
+  
+  p {
+	margin-bottom: 10px;
+  }
+  .avatar {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
+  
+  .avatar img {
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+  }
