--- a/src/frontend_next/styles/globals.css
+++ b/src/frontend_next/styles/globals.css
@@ -26,6 +26,10 @@ body {
 	}
 }
 
+.w-fit{
+	z-index: 100; /*navbar dropdown*/
+}
+
 #appRootContainer {
 	height: 100vh;
 	background-color: #a4a4a47a;
@@ -50,7 +54,6 @@ nav {
 	border-radius: 6px;
 	padding: 20px;
 	margin-bottom: 20px;
-	position: unset; /* chouf hadi */
   }
   
   h1 {
