tweaking the game ui/ux

--- a/src/frontend_next/styles/globals.css
+++ b/src/frontend_next/styles/globals.css
@@ -41,10 +41,11 @@ nav {
   backdrop-filter: brightness(1.9);
 }
 
-.login {
+.aero {
   background-color: #a4a4a47a;
   backdrop-filter: brightness(1.9);
 }
+
 /* chat */
 
 /* profile */
