--- a/src/frontend_next/styles/gameStyle.css
+++ b/src/frontend_next/styles/gameStyle.css
@@ -1,5 +1,3 @@
-
-
 /* .gameDiv{
   display: none;
   z-index: -1;
@@ -52,7 +50,7 @@ body {
   background-color: #ddd;
   left: calc((var(--x) * 1vw));
   top: calc((var(--y) * 1vh));
-  transform: translateY(-50%, -50%);
+  transform: translate(-50%, -50%);
   width: 2.5vh;
   height: 2.5vh;
   border-radius: 50%;
@@ -78,4 +76,3 @@ body {
   padding-left: 3vw;
   margin-top: 2vw;
 }
-   
