--- a/src/frontend_next/styles/gameStyle.css
+++ b/src/frontend_next/styles/gameStyle.css
@@ -43,8 +43,8 @@ body {
 }
 
 .ball {
-  --x: 50;
-  --y: 50;
+  /* --x: 50; */
+  /* --y: 50; */
 
   position: absolute;
   background-color: #ddd;
