--- a/src/frontend_next/styles/globals.css
+++ b/src/frontend_next/styles/globals.css
@@ -2,19 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-/* html , body{
-  background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
-  height: 100vh;
-} */
 
-body {
+@layer utilities {
+    @variants responsive {
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      .no-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+
+      /* Hide scrollbar for IE, Edge and Firefox */
+      .no-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+      }
+    }
+  }
+html , body{
+  /* background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%); */
+  min-height: 100vh;
+} 
+
+
+/* body {
 	background: linear-gradient(-45deg, #ee7752, #fb2727, #23a6d5, #23d5ab);
 	background-size: 230% 200%;
 	animation: gradient 10s ease infinite;
 	height: 100vh;
-}
+} */
 
-@keyframes gradient {
+/* @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
 	}
@@ -24,12 +40,12 @@ body {
 	100% {
 		background-position: 0% 50%;
 	}
-}
+} */
 
 #appRootContainer {
-	height: 100vh;
+	/* height: 100vh;
 	background-color: #a4a4a47a;
-  	backdrop-filter: blur(10px);
+  	backdrop-filter: blur(10px); */
 }
 
 nav {
@@ -42,6 +58,9 @@ nav {
   backdrop-filter: brightness(1.9);
 }
 /* chat */
+
+
+
 
 /* profile */
 .card {
