--- a/src/frontend_next/styles/globals.css
+++ b/src/frontend_next/styles/globals.css
@@ -4,22 +4,27 @@
 
 
 @layer utilities {
-    @variants responsive {
-      /* Hide scrollbar for Chrome, Safari and Opera */
-      .no-scrollbar::-webkit-scrollbar {
-          display: none;
-      }
+	@variants responsive {
 
-      /* Hide scrollbar for IE, Edge and Firefox */
-      .no-scrollbar {
-          -ms-overflow-style: none;  /* IE and Edge */
-          scrollbar-width: none;  /* Firefox */
-      }
-    }
-  }
-html , body{
-  /* background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%); */
-  min-height: 100vh;
+		/* Hide scrollbar for Chrome, Safari and Opera */
+		.no-scrollbar::-webkit-scrollbar {
+			display: none;
+		}
+
+		/* Hide scrollbar for IE, Edge and Firefox */
+		.no-scrollbar {
+			-ms-overflow-style: none;
+			/* IE and Edge */
+			scrollbar-width: none;
+			/* Firefox */
+		}
+	}
+}
+
+html,
+body {
+	/* background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%); */
+	min-height: 100vh;
 }
 
 body {
@@ -29,6 +34,11 @@ body {
 	background-size: 230% 200%;
 	background-image: var(--bg-image);
 	background-size: auto;
+
+	/* // */
+	margin: 0;
+	overflow: visible;
+	min-width: 416px;
 }
 
 #appRootContainer {
@@ -43,6 +53,7 @@ body {
 	backdrop-filter: brightness(1.9);
 	opacity: var(--opacity);
 }
+
 #Navbar:hover {
 	opacity: 1;
 }
