--- a/src/frontend_next/styles/globals.css
+++ b/src/frontend_next/styles/globals.css
@@ -4,7 +4,7 @@
 
 
 @layer utilities {
-	@variants responsive {
+	@layer component{
 
 		/* Hide scrollbar for Chrome, Safari and Opera */
 		.no-scrollbar::-webkit-scrollbar {
